--- a/packages/core-app-api/package.json
+++ b/packages/core-app-api/package.json
@@ -37,6 +37,7 @@
     "@material-ui/icons": "^4.9.1",
     "@types/react": "^16.9",
     "@types/prop-types": "^15.7.3",
+    "cross-fetch": "^3.0.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-router-dom": "6.0.0-beta.0",
