--- a/packages/core-plugin-api/package.json
+++ b/packages/core-plugin-api/package.json
@@ -33,6 +33,7 @@
     "@backstage/theme": "^0.2.8",
     "@material-ui/core": "^4.11.0",
     "@types/react": "^16.9",
+    "cross-fetch": "^3.0.6",
     "history": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
